[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["ybny0nsr <oleg.tikhonoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
